内部処理の大幅な見直しとロギングの強化